--- a/views/index.pug
+++ b/views/index.pug
@@ -11,8 +11,8 @@ block content
 				.me__pic
 					img(src='/images/photo.jpeg', alt='A picture of Jen Downs.')
 				.me__desc.center-vertically
-					p I'm a front-end developer living in Austin, TX.
-					p I use <a href="https://www.ibm.com/design/language/experience/front-end/fundamentals/">code as a design tool</a> to create compelling and useable online experiences.
+					p <span>I'm a front-end developer living in Austin, TX.</span>
+					p <span>I use <a href="https://www.ibm.com/design/language/experience/front-end/fundamentals/">code as a design tool</a> to create compelling and useable online experiences.</span>
 	section#projects
 		.container
 			h2 Projects
@@ -73,7 +73,7 @@ block content
 	section#about
 		.container
 			h2 About this site
-			p I built this site using <strong>Node.js + Express</strong> with <strong>SCSS</strong> &amp; <strong>Pug</strong> templating language, and I'm using <strong>Contentful's RESTful JSON API</strong> to deliver my blog posts and project previews. Originally, I used WordPress as a CMS for this site, but I decided to refactor with a headless CMS solution because it's so flexible.
+			p I built this site using <strong>Node.js + Express</strong> with <strong>SCSS</strong> &amp; <strong>Pug</strong> templating language, and I'm using <strong>Contentful's RESTful JSON API</strong> to deliver my blog posts and project previews. 
 			p.center <a class="button" href="https://github.com/jendowns/portfolio-node" target="_blank">View Code on Github <i class="icon-github" aria-hidden="true"></i></a>
 
 
