Fixed typos, added emoji, increased heading size

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,8 +11,8 @@ block content
 				.me__pic
 					img(src='/images/photo.jpeg', alt='A picture of Jen Downs.')
 				.me__desc.center-vertically
-					p <span>I'm a front-end developer living in Austin, TX.</span>
-					p <span>I use <a href="https://www.ibm.com/design/language/experience/front-end/fundamentals/">code as a design tool</a> to create compelling and useable online experiences.</span>
+					p <span>I'm a front end developer living in Austin, TX. ☀️ </span>
+					p <span>I use <a href="https://www.ibm.com/design/language/experience/front-end/fundamentals/">code as a design tool</a> ✨ to create compelling online experiences.</span>
 	section#projects
 		.container
 			h2 Projects
