--- a/views/header.pug
+++ b/views/header.pug
@@ -21,7 +21,7 @@ html(lang="en")
 		meta(property="twitter:description", content="Jen shares her thoughts about front end development + design and her current projects.")
 
 		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i')
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/stylesheets/styles.css')
 
 		//-
 			script(type='text/javascript').
