--- a/sass/highlight.scss
+++ b/sass/highlight.scss
@@ -1,16 +1,16 @@
 /*
-    Paraíso (dark)
+    Modified Paraíso (dark)
     Created by Jan T. Sott (http://github.com/idleberg)
     Inspired by the art of Rubens LP (http://www.rubenslp.com.br)
 */
 
-/* Paraíso Comment */
+/* Comment - Light purple */
 .hljs-comment,
 .hljs-quote {
-  color: #8d8687;
+  color: #d9d1f0;
 }
 
-/* Paraíso Red */
+/* Red */
 .hljs-variable,
 .hljs-template-variable,
 .hljs-tag,
@@ -20,10 +20,10 @@
 .hljs-regexp,
 .hljs-link,
 .hljs-meta {
-  color: #ef6155;
+  color: #ff4b3e;
 }
 
-/* Paraíso Orange */
+/* Orange */
 .hljs-number,
 .hljs-built_in,
 .hljs-builtin-name,
@@ -31,35 +31,35 @@
 .hljs-type,
 .hljs-params,
 .hljs-deletion {
-  color: #f99b15;
+  color: #fb5012;
 }
 
-/* Paraíso Yellow */
+/* Yellow */
 .hljs-title,
 .hljs-section,
 .hljs-attribute {
-  color: #fec418;
+  color: #ffb400;
 }
 
-/* Paraíso Green */
+/* Green */
 .hljs-string,
 .hljs-symbol,
 .hljs-bullet,
 .hljs-addition {
-  color: #48b685;
+  color: #7cea9c;
 }
 
-/* Paraíso Purple */
+/* Blue */
 .hljs-keyword,
 .hljs-selector-tag {
-  color: #815ba4;
+  color: #98c1d9;
 }
 
 .hljs {
   display: block;
   overflow-x: auto;
-  background: #2f1e2e;
-  color: #a39e9b;
+  background: #372554;
+  color: #fafafa;
   padding: 0.5em;
 }
 
