--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -19,3 +19,4 @@ $toolbar--gray: rgb(222, 222, 222);
 $font--heading: 'Raleway', Helvetica, Arial, Verdana, sans-serif;
 $font--title: 'Raleway', Helvetica, Arial, Verdana, sans-serif;
 $font--body: 'Raleway', Helvetica, Arial, Verdana, sans-serif;
+$font--code: 'Inconsolata', Helvetica, Arial, Verdana, sans-serif;
