--- a/views/index.pug
+++ b/views/index.pug
@@ -5,12 +5,29 @@ block content
 		.container
 			h1 Jen Downs
 			h2 front end developer
+			ul.social-icons
+				li
+					a(href='https://twitter.com/jenisora', target='_blank', title='Twitter')
+						i.icon.icon-twitter(aria-hidden="true")
+						span.screen-reader Twitter
+				li
+					a(href='https://codepen.io/jendowns', target='_blank', title='Codepen')
+						i.icon.icon-codepen(aria-hidden="true")
+						span.screen-reader Codepen
+				li
+					a(href='https://github.com/jendowns', target='_blank', title='GitHub')
+						i.icon.icon-github(aria-hidden="true")
+						span.screen-reader GitHub
+				li
+					a(href='https://keybase.io/jeni', target='_blank', title='Keybase.io')
+						i.icon.icon-key(aria-hidden="true")
+						span.screen-reader jeni on Keybase.io
 	section#me
 		.container
 			.flex-grid
 				.me__pic
-					img(src='/images/photo.jpeg', alt='A picture of Jen Downs.')
-				.me__desc.center-vertically
+					img(src='/images/twcomm.png', alt='Picture of Jen Downs by Soojin Lim (Twitter: @imSoojin_art)')
+				.me__desc
 					p <span>I'm a front end developer living in Austin, TX. ☀️ </span>
 					p <span>I use <a href="https://www.ibm.com/design/language/experience/front-end/fundamentals/">code as a design tool</a> ✨ to create compelling online experiences.</span>
 	section#projects
@@ -84,10 +101,8 @@ block content
 					li
 						small &copy; 2017 Jen Downs.
 					li
-						small Made with&nbsp;
-							i.icon.icon-heart
-							span.screen-reader love
-							| &nbsp;in Austin, TX.
+						small Portrait by <a href='https://twitter.com/imSoojin_art' target='_blank'>Soojin Lim</a>
+
 				ul.social-icons
 					li
 						a(href='https://twitter.com/jenisora', target='_blank', title='Twitter')
