--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -171,6 +171,14 @@ em {
 	justify-content: space-between;
 	flex-wrap: wrap;
   flex-direction: row;
+	margin: ($--baseline * 5 + px) 0;
+
+	&:first-child {
+		margin-top: 0;
+	}
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 
 
@@ -229,6 +237,7 @@ header {
 	background-color: lighten($toolbar--gray, 8%);
   background-image: url(/images/geometry.png);
   background-size: 218px;
+  border-top: 2px solid lighten($purple, 14%);
 
   h2 {
     color: darken($purple, 30%);
@@ -274,6 +283,7 @@ article {
   background-color: lighten($toolbar--gray, 8%);
   background-image: url(/images/geometry.png);
   background-size: 218px;
+  border-bottom: 2px solid lighten($purple, 14%);
 
   .container {
     max-width: 550px;
@@ -375,37 +385,60 @@ article {
   h2, h3 {
     color: darken($purple, 30%);
   }
+}
 
-  .flex-grid {
-    flex-direction: row-reverse;
+.grid {
+  display: grid;
+  grid-gap: $--baseline + px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  margin: ($--baseline * 5 + px) 0;
+
+  & > div:first-child {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+  }
+
+  & > div:nth-child(2) {
+    grid-column: 3;
+    grid-row: 1;
+  }
+
+  & > div:last-child {
+    grid-column: 3;
+    grid-row: 2;
   }
 }
 
-.flex-grid {
-	margin: ($--baseline * 5 + px) 0;
+@supports not (display: grid) {
+  .grid {
+    @extend .flex-grid;
+  }
 
-	&:first-child {
-		margin-top: 0;
-	}
-	&:last-child {
-		margin-bottom: 0;
-	}
+  .project__window {
+    min-width: 300px;
+    width: 32%;
+  }
 }
 
+/*
 .project__info {
 	width: 50%;
 	padding-left: ($--baseline * 2) + px;
 }
+*/
 
 .project__window {
-	width: 50%;
-	max-width: 450px;
+	//width: 50%;
+	//max-width: 500px;
+  min-height: 200px;
 }
 .window__wrapper {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	overflow: hidden;
+	height: 100%;
+  overflow: hidden;
 	//box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
 	@include border-radius(6);
 	border: 2px solid lighten($purple, 7%);
@@ -436,6 +469,10 @@ article {
 	&:first-child {
 		margin-left: 12px;
 	}
+}
+.window__pic {
+  flex-grow: 1;
+  min-height: 200px;
 }
 
 
@@ -653,21 +690,17 @@ pre {
 		width: calc(100% - 8px);
 	}
 
-	.flex-grid {
+	.flex-grid, .grid {
 		display: block;
-    margin: $--baseline * 2 + px 0px;
-
+    margin: ($--baseline * 2 + px) 0px;
 	}
   .project__window {
-    width: 95%;
-    margin: $--baseline + px;
+    margin: ($--baseline + px) auto;
+    min-width: auto;
   }
   .project__window, .project__info, footer ul {
 		width: 98%;
 	}
-  .project__window {
-    margin: 0 auto;
-  }
 	.project__info {
 		padding-left: 0;
     padding-top: $--baseline + px;
@@ -677,6 +710,9 @@ pre {
 	#projects p, #about p {
 		@include calc-font-flow(15);
 	}
+  .window__pic {
+    min-height: 300px;
+  }
 
   footer ul:last-child {
     padding-top: $--baseline * 1.5 + px;
